--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="destaque-titulo">com um Front-End de qualidade.</strong></h1>
             <p class="apresentacao__conteudo__texto">
-                Olá! Sou Bella Espósito, desenvolvedora com especialidade em NadaAinda.
+                Olá! Sou Bella Espósito, desenvolvedora com especialidade em Front end
 
-                Ajudo NinguemAinda a colocarem em prática boas ideias. Vamos conversar?
+                Adquirindo conhecimentos em HTML, CSS, JS e em breve React, sem contar os conhecimentos em Git/Github, Scrum e UX/UI. Vamos conversar?
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo"> Acesse minhas redes: </h2>
