--- a/about.html
+++ b/about.html
@@ -19,10 +19,11 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo"> Sobre Mim </h1>
             <p class="apresentacao__conteudo__texto">
-                Olá, meu nome é Bella Espósito, sou Bacharel em Educação Física pelo IBMR, professora de Lira Circense e Pole Dance, além de personal trainer com especialização em pessoas gestantes. Sou mãe de 2 pets: minha calopsita Remo de 16 anos e meu cachorro Aslam de 9 anos.</p>
+                Olá, meu nome é Bella Espósito, sou graduanda de Análise e Desenvolvimento de Sistemas pela UVA, aluna da Alura, Origamid e da Comunidade DEVCompleto. Além disso sou Bacharel em Educação Física pelo IBMR, professora de Lira Circense e Pole Dance. Sou mãe de 2 pets: minha calopsita Remo de 16 anos e meu cachorro Aslam de 9 anos.</p>
             <p class="apresentacao__conteudo__texto">
-                Sou completamente artística, apaixonada por todas as demosntrações de arte possíveis e agora, me aventurando do mundo da Programação.
+                Sou completamente artística, apaixonada por todas as demonstrações de arte possíveis e agora, me aventurando do mundo da Programação.
                 Comecei nesse mundo desde agosto/2023 e não poderia estar mais animada para aprender mais e trocar ideias, conhecimento e parceria.
+                Estou me aperfeiçoando na área de Frontend e em breve terei mais coisas nesse portfólio para mostrar ao mundo!
             </p>
             
         </section>
